[package]
name = "esp-embassy-usb"
version = "0.1.0"
authors = ["Adam Simpkins <adam@adamsimpkins.net>"]
edition = "2021"

[workspace]
members = ["examples"]

[dependencies]
esp-hal = { version = "0.16.1", features = ["async", "embassy", "embassy-time-timg0", "embassy-executor-thread"] }
log = { version = "0.4.20" }
esp-hal-procmacros = { version = "0.9.0", features = ["embassy"] }
embassy-usb-driver = "0.1.0"
futures = { version = "0.3.30", default-features = false }
embassy-sync = "0.5.0"
vcell = "0.1.3"
embassy-time = "0.3.0"
esp32s2 = { version = "0.20.0", optional = true }
esp32s3 = { version = "0.24.0", optional = true }
bytemuck = "1.15.0"
static_assertions = "1.1.0"

[features]
esp32s2 = ["dep:esp32s2", "esp-hal/esp32s2"]
esp32s3 = ["dep:esp32s3", "esp-hal/esp32s3"]

# TODO: these patches are for development only, for using development versions
# of these crates.  Delete them from a real release.
[patch.crates-io]
# A patch which includes https://github.com/twitchyliquid64/usbd-hid/pull/63
usbd-hid-macros = { path = "../../src/usbd-hid/macros" }
usbd-hid = { path = "../../src/usbd-hid" }
embassy-usb = { path = "../../src/embassy/embassy-usb" }
embassy-usb-driver = { path = "../../src/embassy/embassy-usb-driver" }
