[package]
name = "esp-embassy-usb"
version = "0.1.0"
authors = ["Adam Simpkins <adam@adamsimpkins.net>"]
edition = "2021"

[workspace]
members = ["examples"]

[profile.release]
opt-level = 3
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
overflow-checks = false

[profile.dev]
debug = true
# Build with optimization even in debug builds.
opt-level = 2

[dependencies]
esp-hal = { version = "0.16.1", features = ["async", "embassy", "embassy-time-timg0", "embassy-executor-thread"] }
log = { version = "0.4.20", optional = true }
esp-hal-procmacros = { version = "0.9.0", features = ["embassy"] }
embassy-usb-driver = "0.1.0"
embassy-usb = "0.1.0"
embassy-sync = "0.5.0"
vcell = "0.1.3"
embassy-time = "0.3.0"
esp32s2 = { version = "0.20.0", optional = true }
esp32s3 = { version = "0.24.0", optional = true, features = ["impl-register-debug"]}
bytemuck = "1.15.0"
static_assertions = "1.1.0"
defmt = { version = "0.3.6", optional = true }

[features]
esp32s2 = ["dep:esp32s2", "esp-hal/esp32s2"]
esp32s3 = ["dep:esp32s3", "esp-hal/esp32s3"]

# TODO: remove these patches once the changes are merged upstream
[patch.crates-io]
# Use the latest embassy code, needed so it depends on the lastest usbd-hid
embassy-usb-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "067e4228" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", rev = "067e4228"  }
# Use usbd-hid with https://github.com/twitchyliquid64/usbd-hid/pull/63
usbd-hid-macros = { git = "https://github.com/simpkins/usbd-hid-rs.git", rev = "593e825" }
usbd-hid = { git = "https://github.com/simpkins/usbd-hid-rs.git", rev = "593e825" }
# Use a version of esp-hal that depends includes the esp-pacs change
# https://github.com/esp-rs/esp-pacs/pull/213
esp-hal = { git = "https://github.com/simpkins/esp-hal.git", rev = "2b8a710b" }
esp-hal-procmacros = { git = "https://github.com/simpkins/esp-hal.git", rev = "2b8a710b" }
