[package]
name = "esp-embassy-usb"
version = "0.1.0"
authors = ["Adam Simpkins <adam@adamsimpkins.net>"]
edition = "2021"

[workspace]
members = ["examples"]

[profile.release]
opt-level = 3
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
overflow-checks = false

[profile.dev]
debug = true
# Build with optimization even in debug builds.
opt-level = 2

[dependencies]
esp-hal = { version = "0.16.1", features = ["async", "embassy", "embassy-time-timg0", "embassy-executor-thread"] }
log = { version = "0.4.20", optional = true }
esp-hal-procmacros = { version = "0.9.0", features = ["embassy"] }
embassy-usb-driver = "0.1.0"
embassy-sync = "0.5.0"
embassy-time = "0.3.0"
bytemuck = "1.15.0"
static_assertions = "1.1.0"
defmt = { version = "0.3.6", optional = true }

# TODO: remove these patches once the upstream changes are published in
# released crates
[patch.crates-io]
# Use the latest embassy code, needed so it depends on the lastest usbd-hid
embassy-usb-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "c575c7dc6" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", rev = "c575c7dc6"  }
# We require a currently unpublished version of usbd-hid for compatibility
# with esp-hal dependencies
usbd-hid-macros = { git = "https://github.com/twitchyliquid64/usbd-hid.git", rev = "76bea16" }
usbd-hid = { git = "https://github.com/twitchyliquid64/usbd-hid.git", rev = "76bea16" }
# We require a fairly recent version of esp-hal, which includes some of my USB
# improvements.
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "3d9f117b" }
esp-hal-procmacros = { git = "https://github.com/esp-rs/esp-hal.git", rev = "3d9f117b" }
