[package]
name = "esp-embassy-usb-examples"
version = "0.1.0"
authors = ["Adam Simpkins <adam@adamsimpkins.net>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[[bin]]
name = "hid_keyboard"
target = "hid_keyboard.rs"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.16.1", features = ["async", "embassy", "embassy-time-timg0", "embassy-executor-thread"] }
esp-println = { version = "0.9.0", features = ["log"] }
log = { version = "0.4.20" }
embassy-executor = { version = "0.5.0", features = ["nightly", "integrated-timers"] }
esp-hal-procmacros = { version = "0.9.0", features = ["embassy"] }
embassy-futures = "0.1.1"
embassy-usb = { version = "0.1.0", features = ["max-interface-count-1", "max-handler-count-2", "log"] }
esp-embassy-usb = { path = ".." }
usbd-hid = "0.7.0"
embedded-hal-async = "1.0.0"
embassy-time = "0.3.0"

[features]
esp32s3 = ["esp-backtrace/esp32s3", "esp-hal/esp32s3", "esp-println/esp32s3", "esp-embassy-usb/esp32s3"]
esp32s2 = ["esp-backtrace/esp32s2", "esp-hal/esp32s2", "esp-println/esp32s2", "esp-embassy-usb/esp32s2"]
